GenericResult added, BaseController added. home page development started

--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Home/Index.cshtml
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Home/Index.cshtml
@@ -1,8 +1,15 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+@section Scripts{
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+
+}
