--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Shared/_Layout.cshtml
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <link href="~/gentelella/nprogress/nprogress.css" rel="stylesheet">
     <!-- Custom Theme Style -->
     <link href="~/gentelella/css/custom.min.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet" />
     <style>
         footer {
             position: fixed;
@@ -25,6 +26,7 @@
         body {
             background-color: #F7F7F7;
         }
+       
     </style>
 </head>
 <body class="nav-md">
@@ -117,6 +119,11 @@
 
     <!-- Custom Theme Scripts -->
     <script src="~/gentelella/js/custom.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+
+
+    <script src="~/js/site.js"></script>
+
     @RenderSection("Scripts", required: false)
 
 </body>
