--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Shared/_leftMenuPartial.cshtml
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Shared/_leftMenuPartial.cshtml
@@ -1,64 +1,80 @@
-﻿
-  
-    <!-- menu profile quick info -->
-    <div class="profile clearfix">
-        <div class="profile_pic">
-            <img src="~/images/img.jpg" alt="..." class="img-circle profile_img">
-        </div>
-        <div class="profile_info">
-            <span>Welcome,</span>
-            <h2>John Doe</h2>
-        </div>
-        <div class="clearfix"></div>
+﻿<!-- menu profile quick info -->
+<div class="profile clearfix">
+    <div class="profile_pic">
+        <img src="~/img/person_6x8.png"  alt="profile Image"  class="img-circle profile_img"/>
     </div>
-    <!-- /menu profile quick info -->
-    <br />
-    <!-- sidebar menu -->
-    <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
-        <div class="menu_section">
-            <h3>Live On</h3>
-            <ul class="nav side-menu">
-                <li><a href="javascript:void(0)"><i class="fa fa-laptop"></i> Landing Page <span class="label label-success pull-right">Coming Soon</span></a></li>
-                <li>
-                    <a><i class="fa fa-sitemap"></i> Multilevel Menu <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                        <li><a href="#level1_1">Level One</a>
-                        <li>
-                            <a>Level One<span class="fa fa-chevron-down"></span></a>
-                            <ul class="nav child_menu">
-                                <li class="sub_menu">
-                                    <a href="level2.html">Level Two</a>
-                                </li>
-                                <li>
-                                    <a href="#level2_1">Level Two</a>
-                                </li>
-                                <li>
-                                    <a href="#level2_2">Level Two</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#level1_2">Level One</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
+    <div class="profile_info">
+        <span>Welcome,</span>
+        <h2>John Doe</h2>
     </div>
-    <!-- /sidebar menu -->
-    <!-- /menu footer buttons -->
-    <div class="sidebar-footer hidden-small">
-        <a data-toggle="tooltip" data-placement="top" title="Settings">
-            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-        </a>
-        <a data-toggle="tooltip" data-placement="top" title="FullScreen">
-            <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
-        </a>
-        <a data-toggle="tooltip" data-placement="top" title="Lock">
-            <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
-        </a>
-        <a data-toggle="tooltip" data-placement="top" title="Logout" href="login.html">
-            <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
-        </a>
+    <div class="clearfix"></div>
+</div>
+<!-- /menu profile quick info -->
+<br />
+<!-- sidebar menu -->
+<!-- <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
+    <div class="menu_section">
+        <h3>Live On</h3>
+        <ul class="nav side-menu">
+            <li><a href="javascript:void(0)"><i class="fa fa-laptop"></i> Landing Page </a></li>
+            <li>
+                <a><i class="fa fa-sitemap"></i> Multilevel Menu <span class="fa fa-chevron-down"></span></a>
+                <ul class="nav child_menu">
+                    <li><a href="#level1_1">Level One</a>
+                    <li>
+                        <a>Level One<span class="fa fa-chevron-down"></span></a>
+                        <ul class="nav child_menu">
+                            <li class="sub_menu">
+                                <a href="level2.html">Level Two</a>
+                            </li>
+                            <li>
+                                <a href="#level2_1">Level Two</a>
+                            </li>
+                            <li>
+                                <a href="#level2_2">Level Two</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#level1_2">Level One</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
     </div>
-    <!-- /menu footer buttons -->
+</div> -->
+<div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
+    <div class="menu_section">
+        <ul class="nav side-menu">
+            <li><a href="/"><i class="fa fa-laptop"></i>Home</a></li>
+            <li><a href="/StudentDashboard"><i class="fa fa-laptop"></i>DashBoard</a></li>
+            <li>
+                <a><i class="fa fa-sitemap"></i> Management <span class="fa fa-chevron-down"></span></a>
+                <ul class="nav child_menu">
+                    <li><a href="/Management/People">People</a>
+                    <li><a href="/Management/User">User</a></li>
+                    <li><a href="/Management/User">Student</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+</div>
+
+
+<!-- /sidebar menu -->
+<!-- /menu footer buttons -->
+<div class="sidebar-footer hidden-small">
+    <a data-toggle="tooltip" data-placement="top" title="Settings">
+        <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+    </a>
+    <a data-toggle="tooltip" data-placement="top" title="FullScreen">
+        <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
+    </a>
+    <a data-toggle="tooltip" data-placement="top" title="Lock">
+        <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
+    </a>
+    <a data-toggle="tooltip" data-placement="top" title="Logout" href="login.html">
+        <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
+    </a>
+</div>
+<!-- /menu footer buttons -->
