--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Shared/_leftMenuPartial.cshtml
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Shared/_leftMenuPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿<!-- menu profile quick info -->
 <div class="profile clearfix">
     <div class="profile_pic">
-        <img src="~/img/person_6x8.png"  alt="profile Image"  class="img-circle profile_img"/>
+        <img src="~/img/person_6x8.png" alt="profile Image" class="img-circle profile_img" />
     </div>
     <div class="profile_info">
         <span>Welcome,</span>
@@ -51,9 +51,7 @@
             <li>
                 <a><i class="fa fa-sitemap"></i> Management <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                    <li><a href="/Management/People">People</a>
-                    <li><a href="/Management/User">User</a></li>
-                    <li><a href="/Management/User">Student</a></li>
+                    <li><a href="/Management/StudentRegistration">Student Registration</a>
                 </ul>
             </li>
         </ul>
