population service created and student information system is integrated to service.

--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Areas/Management/Views/StudentRegistration/RegisterNewStudent.cshtml
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Areas/Management/Views/StudentRegistration/RegisterNewStudent.cshtml
@@ -16,7 +16,7 @@
             }
             else
             {
-                <span>@Model.GetAllMessage()</span>
+                <span>@Model.GetAllMessage(defaultMsg: "An error occurred")</span>
             }
 
         </div>
