--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Areas/Management/Views/StudentRegistration/Index.cshtml
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Areas/Management/Views/StudentRegistration/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model StudentManagementSystem.Business.StudentBusiness.Dto.NewStudentInformationDto
+﻿@model StudentManagementSystem.BLL.StudentBusiness.Dto.NewStudentInformationDto
 @{
     ViewData["Title"] = "Index";
 }
