namespaces fix, CourseScoreManagement is under development

--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Shared/_leftMenuPartial.cshtml
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Shared/_leftMenuPartial.cshtml
@@ -52,6 +52,7 @@
                 <a><i class="fa fa-sitemap"></i> Management <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                     <li><a href="/Management/StudentRegistration">Student Registration</a>
+                    <li><a href="/Management/CourseScoreManagement">Course Score Management</a>
                 </ul>
             </li>
         </ul>
