--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Home/Index.cshtml
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Home/Index.cshtml
@@ -39,33 +39,6 @@
 @section Scripts{
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 <script>
-$('#2').select2({
-        ajax: {
-            url: 'Home/Search',
-            data: function (params) {
-                var query = {
-                    search: params.term,
-                    type: 'public'
-                }
-
-                // Query parameters will be ?search=[term]&type=public
-                return query;
-            },
-            processResults: function (data) {
-                // Tranforms the top-level key of the response object from 'items' to 'results'
-                var dataNew = $.map(data, function (obj) {
-                    obj.id = obj.id || obj.pk; // replace pk with your identifier
-                    obj.name = "test";
-                    return obj;
-                });
-                return {
-                    results: dataNew
-                };
-            }
-        }
-    });
-
-
 
 $("#studentSelect").select2({
     ajax: {
@@ -106,7 +79,7 @@ $("#studentSelect").select2({
     },
     placeholder: 'Search for a student',
     escapeMarkup: function (markup) { return markup; }, // let our custom formatter work
-    minimumInputLength: 2,
+    minimumInputLength: 1,
     templateResult: formatState,
     //templateSelection: formatState
 });
@@ -123,7 +96,7 @@ function formatState(state) {
     state.id = state.Item1;
 
     var $state = $(
-        '<div class="col-xs-12"><div style="float:left"><img src="' + state.Item3 + '.png" class="img img-responsive" style="width:50px !important;"/> </div><div class="select2-raw-content-text">' + state.Item2 + " - " + state.Item4 + '</div></div> <div class="clearfix"><div>'
+        '<div class="col-xs-12"><div style="float:left"><img src="' + state.Item3 + '" class="img img-responsive" style="width:50px !important;"/> </div><div class="select2-raw-content-text">' + state.Item2 + " - " + state.Item4 + '</div></div> <div class="clearfix"><div>'
     );
     return $state;
 };
