--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Shared/_Layout.cshtml
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Shared/_Layout.cshtml
@@ -26,7 +26,6 @@
         body {
             background-color: #F7F7F7;
         }
-       
     </style>
 </head>
 <body class="nav-md">
@@ -75,20 +74,20 @@
             <div class="right_col" role="main">
                 <div class="">
                     @*<div class="page-title">
-                            <div class="title_left">
-                                <h3>@Html.Raw(ViewBag.PageTitle ?? "Plain Page")</h3>
-                            </div>
-                            <div class="title_right">
-                                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" placeholder="Search for...">
-                                        <span class="input-group-btn">
-                                            <button class="btn btn-default" type="button">Go!</button>
-                                        </span>
-                                    </div>
+                        <div class="title_left">
+                            <h3>@Html.Raw(ViewBag.PageTitle ?? "Plain Page")</h3>
+                        </div>
+                        <div class="title_right">
+                            <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                                <div class="input-group">
+                                    <input type="text" class="form-control" placeholder="Search for...">
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-default" type="button">Go!</button>
+                                    </span>
                                 </div>
                             </div>
-                        </div>*@
+                        </div>
+                    </div>*@
                     <div class="clearfix"></div>
                     <div class="row">
                         <div class="col-md-12 col-sm-12 col-xs-12">
@@ -108,6 +107,28 @@
             <!-- /footer content -->
         </div>
     </div>
+
+
+    <div class="modal fade" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;" id="GlobalModal">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                    <h4 class="modal-title" id="GlobalModalTitle">Modal title</h4>
+                </div>
+                <div class="modal-body" id="GlobalModalBody">
+                </div>
+                <div class="modal-footer">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <!-- jQuery -->
     <script src="~/gentelella/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
@@ -123,7 +144,16 @@
 
 
     <script src="~/js/site.js"></script>
+    <script>
+        $('*[data-toggle="global-modal"]').click(function () {
+            var title = $(this).attr("data-global-title");
+            var url = $(this).attr("data-source");
 
+            $("#GlobalModal").modal("show");
+            $("#GlobalModalTitle").text(title);
+            $("#GlobalModalBody").empty().load(url);
+        });
+    </script>
     @RenderSection("Scripts", required: false)
 
 </body>
