course information management added

--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Areas/Management/Views/CourseScoreManagement/CourseScoresForStudent.cshtml
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Areas/Management/Views/CourseScoreManagement/CourseScoresForStudent.cshtml
@@ -14,22 +14,16 @@ else
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
-                <th>ID</th>
                 <th>Score</th>
-                <th>PreviousId</th>
                 <th>IsDeleted</th>
-                <th></th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.Data)
+            @foreach (var item in Model.Data.OrderBy(x => x.Deleted))
             {
                 <tr>
-                    <td>@item.ID</td>
                     <td>@item.Score</td>
-                    <td>@item.FKPreviousVersionID</td>
                     <td>@Html.Raw(item.Deleted ? "<span style='color:red'>YES</span>" : "NO")</td>
-                    <td><button class="btn btn-xs btn-success"><i class="fa fa-pencil"></i></button></td>
                 </tr>
             }
         </tbody>
