--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Areas/Management/Views/CourseScoreManagement/Index.cshtml
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Areas/Management/Views/CourseScoreManagement/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Index";
 }
 <div class="col-md-6">
-    <div class="x_panel  col-md-12">
+    <div class="x_panel  col-xs-12">
         <div class="x_title">
             <h2>Courses By Student</h2>
             <div class="clearfix"></div>
@@ -38,7 +38,7 @@
     </div>
 </div>
 <div class="col-md-6">
-    <div class="x_panel col-md-12" style="display: none" id="courseScoreDivPanel">
+    <div class="x_panel col-xs-12" style="display: none" id="courseScoreDivPanel">
         <div class="x_title">
             <h2>Course "<span id="courseScoreTitle"></span>"  Scores</h2>
             <div class="nav navbar-right panel_toolbox">
@@ -59,7 +59,6 @@
 
 @section Scripts
 {
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js" integrity="sha384-FzT3vTVGXqf7wRfy8k4BiyzvbNfeYjK+frTVqZeNDFl8woCbF0CYG6g2fMEFFo/i" crossorigin="anonymous"></script>
 
     <script>
     
