--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Shared/_Layout.cshtml
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Shared/_Layout.cshtml
@@ -74,20 +74,20 @@
             <div class="right_col" role="main">
                 <div class="">
                     @*<div class="page-title">
-                        <div class="title_left">
-                            <h3>@Html.Raw(ViewBag.PageTitle ?? "Plain Page")</h3>
-                        </div>
-                        <div class="title_right">
-                            <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                                <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Search for...">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-default" type="button">Go!</button>
-                                    </span>
+                            <div class="title_left">
+                                <h3>@Html.Raw(ViewBag.PageTitle ?? "Plain Page")</h3>
+                            </div>
+                            <div class="title_right">
+                                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" placeholder="Search for...">
+                                        <span class="input-group-btn">
+                                            <button class="btn btn-default" type="button">Go!</button>
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>*@
+                        </div>*@
                     <div class="clearfix"></div>
                     <div class="row">
                         <div class="col-md-12 col-sm-12 col-xs-12">
@@ -141,7 +141,9 @@
     <!-- Custom Theme Scripts -->
     <script src="~/gentelella/js/custom.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js" integrity="sha384-FzT3vTVGXqf7wRfy8k4BiyzvbNfeYjK+frTVqZeNDFl8woCbF0CYG6g2fMEFFo/i" crossorigin="anonymous"></script>
 
     <script src="~/js/site.js"></script>
     <script>
