--- a/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Shared/_leftMenuPartial.cshtml
+++ b/src/StudentManagementSystem/src/StudentManagementSystem.WebUI/Views/Shared/_leftMenuPartial.cshtml
@@ -57,6 +57,7 @@
             <li>
                 <a><i class="fa fa-sitemap"></i>Student Management <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
+                    <li><a href="@Url.Action("Index","StudentCourseManagement",new{Area="Management"})">Add Course To Student</a></li>
                     <li><a href="@Url.Action("Index","CourseScoreManagement",new{Area="Management"})">Course Score Management</a></li>
                 </ul>
             </li>
